--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     
 
-    <script src="./number.js"></script>
+    <!-- <script src="./number.js"></script> -->
+    <script src="./object.js"></script>
 </body>
 </html>
