Intro about enum

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     
 
     <!-- <script src="./number.js"></script> -->
-    <script src="./src/interfaces.ts"></script>
+    <script src="./src/enum.ts"></script>
 </body>
 </html>
