Understanding of types and functions

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 
     <!-- <script src="./number.js"></script> -->
     <script src="./src/enum.ts"></script>
+    <script src="./src/exptypes.ts"></script>
+    <script src="./src/function.js"></script>
+
 </body>
 </html>
